--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "-",
-  "version": "0.0.0",
+  "name": "shapes",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite --port 3310",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@types/jest": "^26.0.23",
+    "jest": "^27.0.6",
     "node-sass": "^6.0.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
-    "sweetalert2": "^11.0.18"
+    "sweetalert2": "^11.0.18",
+    "ts-jest": "^27.0.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
