--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^26.0.23",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "node-sass": "^6.0.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
+    "react-test-renderer": "^17.0.2",
     "sweetalert2": "^11.0.18",
     "ts-jest": "^27.0.3"
   },
@@ -24,9 +26,15 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-test-renderer": "^17.0.1",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "sass": "^1.35.1",
     "typescript": "^4.3.2",
     "vite": "^2.3.8"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    }
   }
 }
